tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-export-directive.wyst
module syntax.removed_export

#export entry
fn entry() {}
